# scalpel

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  bump-version.sh  scalpel.cabal  stack.yaml
.github/workflows/: cabal.yml  stack.yml
.travis/: stack-lts-2.yaml  stack-lts-20190117.yaml  stack-lts-3.yaml  stack-lts-6.yaml  stack-lts-7.yaml  stack-nightly-20190117.yaml
benchmarks/: Main.hs
benchmarks/data/: nested-100.html  nested-1000.html  nested-2000.html
benchmarks/memory/: Main.hs
benchmarks/timing/: Main.hs
examples/: scalpel-examples.cabal
examples/complex-predicates/: Main.hs
examples/custom-user-agent/: Main.hs
examples/error-handling/: Main.hs
examples/error-handling-with-writer/: Main.hs
examples/example-from-documentation/: Main.hs
examples/generalized-repetition/: Main.hs
examples/html-to-markdown/: Main.hs
examples/image-sizes/: .Main.hs.swp  Main.hs
examples/list-all-images/: Main.hs
scalpel/: scalpel.cabal
scalpel-core/: README.md  scalpel-core.cabal
scalpel-core/benchmarks/: Main.hs  wikipedia-new-york-city.html
scalpel-core/src/Text/HTML/Scalpel/: Core.hs
scalpel-core/src/Text/HTML/Scalpel/Internal/: Scrape.hs  Select.hs  Serial.hs
scalpel-core/src/Text/HTML/Scalpel/Internal/Scrape/: StringLike.hs
scalpel-core/src/Text/HTML/Scalpel/Internal/Select/: Combinators.hs  Types.hs
scalpel-core/tests/: TestMain.hs
scalpel/src/Text/HTML/: Scalpel.hs
scalpel/src/Text/HTML/Scalpel/Internal/Scrape/: URL.hs
src/Text/HTML/: Scalpel.hs
src/Text/HTML/Scalpel/: ByteString.hs  String.hs  Text.hs
src/Text/HTML/Scalpel/ByteString/: Lazy.hs
src/Text/HTML/Scalpel/Internal/: Scrape.hs  Select.hs
src/Text/HTML/Scalpel/Internal/Scrape/: StringLike.hs  URL.hs
src/Text/HTML/Scalpel/Internal/Select/: Combinators.hs  Types.hs
src/Text/HTML/Scalpel/Internal/Select/Instances/: ByteString.hs  String.hs  Text.hs
src/Text/HTML/Scalpel/Internal/Select/Instances/ByteString/: Lazy.hs
src/Text/HTML/Scalpel/Internal/Select/Instances/Text/: Lazy.hs
src/Text/HTML/Scalpel/Text/: Lazy.hs
tests/: TestMain.hs
tests/Text/HTML/: ScalpelTest.hs
