name:                scalpel
version:             0.1.1
synopsis:            A high level web scraping library for Haskell.
description:
    Scalpel is a web scraping library inspired by libraries like Parsec and
    Perl's Web::Scraper Scalpel builds on top of TagSoup to provide a
    declarative and monadic interface.
homepage:            https://github.com/fimad/scalpel
license:             Apache-2.0
license-file:        LICENSE
author:              Will Coster
maintainer:          willcoster@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/fimad/scalpel.git

source-repository this
  type:     git
  location: https://github.com/fimad/scalpel.git
  tag:      v0.1.1

library
  other-extensions:
          FlexibleInstances
      ,   FunctionalDependencies
  other-modules:
          Text.HTML.Scalpel.Internal.Scrape
      ,   Text.HTML.Scalpel.Internal.Scrape.StringLike
      ,   Text.HTML.Scalpel.Internal.Scrape.URL
      ,   Text.HTML.Scalpel.Internal.Select
      ,   Text.HTML.Scalpel.Internal.Select.Combinators
      ,   Text.HTML.Scalpel.Internal.Select.Types
  exposed-modules:
      Text.HTML.Scalpel
  hs-source-dirs:   src/
  default-language: Haskell2010
  build-depends:
          base          >= 4.6 && < 5
      ,   bytestring
      ,   download-curl >= 0.1.4
      ,   regex-base
      ,   regex-tdfa
      ,   tagsoup       >= 0.8
      ,   text
  default-extensions:
          OverloadedStrings
      ,   ParallelListComp
      ,   PatternGuards
  ghc-options: -W

test-suite lib-tests
  type:             exitcode-stdio-1.0
  main-is:          TestMain.hs
  hs-source-dirs:   src/, tests/
  build-depends:
          base          >= 4.6 && < 5
      ,   bytestring
      ,   download-curl >= 0.1.4
      ,   HUnit
      ,   regex-base
      ,   regex-tdfa
      ,   tagsoup       >= 0.8
      ,   text
  default-extensions:
          ParallelListComp
      ,   PatternGuards
  ghc-options: -W
