name:                scalpel
version:             0.1.3
synopsis:            A high level web scraping library for Haskell.
description:
    Scalpel is a web scraping library inspired by libraries like Parsec and
    Perl's Web::Scraper Scalpel builds on top of TagSoup to provide a
    declarative and monadic interface.
homepage:            https://github.com/fimad/scalpel
license:             Apache-2.0
license-file:        LICENSE
author:              Will Coster
maintainer:          willcoster@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/fimad/scalpel.git

source-repository this
  type:     git
  location: https://github.com/fimad/scalpel.git
  tag:      v0.1.3

library
  other-extensions:
          FlexibleInstances
      ,   FunctionalDependencies
  other-modules:
          Text.HTML.Scalpel.Internal.Scrape
      ,   Text.HTML.Scalpel.Internal.Scrape.StringLike
      ,   Text.HTML.Scalpel.Internal.Scrape.URL
      ,   Text.HTML.Scalpel.Internal.Select
      ,   Text.HTML.Scalpel.Internal.Select.Combinators
      ,   Text.HTML.Scalpel.Internal.Select.Instances.ByteString
      ,   Text.HTML.Scalpel.Internal.Select.Instances.ByteString.Lazy
      ,   Text.HTML.Scalpel.Internal.Select.Instances.String
      ,   Text.HTML.Scalpel.Internal.Select.Instances.Text
      ,   Text.HTML.Scalpel.Internal.Select.Instances.Text.Lazy
      ,   Text.HTML.Scalpel.Internal.Select.Types
  exposed-modules:
          Text.HTML.Scalpel
      ,   Text.HTML.Scalpel.ByteString
      ,   Text.HTML.Scalpel.ByteString.Lazy
      ,   Text.HTML.Scalpel.String
      ,   Text.HTML.Scalpel.Text
      ,   Text.HTML.Scalpel.Text.Lazy
  hs-source-dirs:   src/
  default-language: Haskell2010
  build-depends:
          base          >= 4.6 && < 5
      ,   bytestring
      ,   curl
      ,   download-curl >= 0.1.4
      ,   regex-base
      ,   regex-tdfa
      ,   tagsoup       >= 0.8
      ,   text
  default-extensions:
          OverloadedStrings
      ,   ParallelListComp
      ,   PatternGuards
  ghc-options: -W

test-suite lib-tests
  type:             exitcode-stdio-1.0
  main-is:          TestMain.hs
  hs-source-dirs:   src/, tests/
  build-depends:
          HUnit
      ,   base          >= 4.6 && < 5
      ,   bytestring
      ,   curl
      ,   download-curl >= 0.1.4
      ,   regex-base
      ,   regex-tdfa
      ,   tagsoup       >= 0.8
      ,   text
  default-extensions:
          ParallelListComp
      ,   PatternGuards
  ghc-options: -W
