name:                scalpel
version:             0.6.1
synopsis:            A high level web scraping library for Haskell.
description:
    Scalpel is a web scraping library inspired by libraries like Parsec and
    Perl's Web::Scraper Scalpel builds on top of TagSoup to provide a
    declarative and monadic interface.
homepage:            https://github.com/fimad/scalpel
license:             Apache-2.0
license-file:        LICENSE
author:              Will Coster
maintainer:          willcoster@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/fimad/scalpel.git

source-repository this
  type:     git
  location: https://github.com/fimad/scalpel.git
  tag:      v0.6.1

library
  other-extensions:
          FlexibleInstances
      ,   FunctionalDependencies
  other-modules:
      Text.HTML.Scalpel.Internal.Scrape.URL
  exposed-modules:
      Text.HTML.Scalpel
  hs-source-dirs:   src/
  default-language: Haskell2010
  build-depends:
          base            >= 4.6 && < 5
      ,   scalpel-core    == 0.6.1
      ,   bytestring
      ,   case-insensitive
      ,   data-default
      ,   http-client     >= 0.4.30
      ,   http-client-tls >= 0.2.4
      ,   tagsoup         >= 0.12.2
      ,   text
  default-extensions:
          ParallelListComp
      ,   PatternGuards
  ghc-options: -W
